--- a/client/app/app.scss
+++ b/client/app/app.scss
@@ -18,6 +18,7 @@ $fa-font-path: "../bower_components/font-awesome/fonts";
 // Component styles are injected through grunt
 /* inject:scss */
 @import 'admin/admin.scss';
+@import 'admin/projectEditor/projectEditor.scss';
 @import 'main/main.scss';
 @import 'project/project.scss';
 @import '../components/footer/footer.scss';
