--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -7,7 +7,8 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a href="/" class="navbar-brand">uwazi2</a>
+      <a class="navbar-brand" href="#"><img src="../../assets/images/projectengage-black.png" style="max-width:100px; margin-top: -7px;" alt="Project Engage Logo"></a>
+      <!-- <a href="/" class="navbar-brand">uwazi2</a> -->
     </div>
     <div uib-collapse="nav.isCollapsed" class="navbar-collapse collapse" id="navbar-main">
       <ul class="nav navbar-nav">
